# TrafficFlow

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
frontend/: index.html  main.js  styles.css
frontend/snapshots/: README.md
src/agents/: __init__.py  vehicle.py
src/map/: generator.py
src/metrics/: __init__.py  collector.py
src/pathfinding/: __init__.py  router.py
src/server/: runtime.py
src/signals/: __init__.py  lights.py
src/simulation/: core.py
tests/: test_router.py  test_signals.py  test_vehicle.py
tests/integration/: test_router_loads.py  test_simulation_signals.py
